--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -108,6 +108,11 @@
   padding-right: 4px;
 }
 
+.jp-gis-layerIcon.jp-gis-mod-hidden path,
+.jp-gis-sourceIcon.jp-gis-mod-hidden path {
+  fill: var(--jp-warn-color0);
+}
+
 .jp-gis-left-panel-input {
   background-color: transparent;
   border: 1px solid var(--jp-border-color1);
