--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -218,7 +218,7 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   box-sizing: border-box;
 }
 
-.jGIS-Annotation-Wrapper {
+.jGIS-Popup-Wrapper {
   position: absolute;
   opacity: 1;
   transition: opacity 0.1s linear 0.15s;
@@ -319,12 +319,12 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   flex-grow: 1;
 }
 
-.jGIS-Annotation-Topbar {
+.jGIS-Popup-Topbar {
   display: flex;
   flex-direction: row-reverse;
 }
 
-.jGIS-Annotation-TopBarIcon {
+.jGIS-Popup-TopBarIcon {
   cursor: pointer;
   transform: rotate(180deg);
 }
@@ -360,6 +360,46 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   border-radius: var(--jp-border-radius);
   flex-grow: 1;
   max-width: 68px;
+}
+
+.jGIS-Remote-Pointer {
+  position: absolute;
+  transition-property: left, top, width, height;
+  transition-duration: 150ms;
+  transition-timing-function: ease;
+  z-index: 20;
+}
+
+.jGIS-Remote-Pointer-Icon:hover {
+  scale: 1.3;
+}
+
+.jGIS-Floating-Pointer-Popup {
+  position: absolute;
+  width: 160px;
+  box-shadow: var(--jp-elevation-z6);
+  z-index: 40;
+  max-height: 400px;
+  overflow: auto;
+}
+
+.jGIS-Remote-Pointer-Popup {
+  margin-left: 7px;
+  margin-top: 14px;
+  color: #fff;
+  padding: 1em;
+  border-radius: 0.5em;
+  font-size: 12px;
+  line-height: 1.2;
+}
+
+.jGIS-Remote-Pointer-Popup-Name {
+  font-size: 16px;
+  color: #333;
+}
+
+.jGIS-Remote-Pointer-Popup-Coordinates {
+  font-size: 14px;
 }
 
 /* Hack to remove the malformed form button */
