--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -8,6 +8,7 @@
 @import url('./leftPanel.css');
 @import url('./filterPanel.css');
 @import url('./symbologyDialog.css');
+@import url('./statusBar.css');
 @import url('ol/ol.css');
 
 .jGIS-Toolbar-GroupName {
