Use theme color for bar bg

--- a/packages/base/style/statusBar.css
+++ b/packages/base/style/statusBar.css
@@ -3,7 +3,7 @@
   justify-content: space-around;
   align-items: center;
   height: 16px;
-  background-color: #292e32;
+  background-color: var(--jp-layout-color1);
   font-size: var(--jp-ui-font-size0);
 }
 
