--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -50,6 +50,11 @@
   position: relative;
 }
 
-.jp-Dialog-button.jp-mod-accept.jp-mod-styled {
+/*This is being upstreamed. Will remove once upstream's been fixed.*/
+button.jp-mod-styled.jp-mod-accept {
   background-color: var(--jp-brand-color1) !important;
+}
+
+button.jp-mod-styled.jp-mod-reject {
+  background-color: var(--jp-layout-color4) !important;
 }
