--- a/packages/base/style/symbologyDialog.css
+++ b/packages/base/style/symbologyDialog.css
@@ -159,7 +159,7 @@ select option {
   z-index: 40;
   flex: 1 1 auto;
   width: 97%;
-  max-height: 375px;
+  max-height: 20rem;
   background: var(--jp-input-background);
   padding-left: 8px;
   border: var(--jp-border-width) solid var(--jp-input-border-color);
@@ -207,6 +207,15 @@ select option {
   width: 100%;
   height: 30px;
   visibility: initial;
+  border-radius: var(--jp-border-radius);
+}
+
+.jp-Dialog-content:has(.jp-gis-color-canvas-display) {
+  overflow: visible;
+}
+
+.jp-Dialog-body:has(.jp-gis-color-canvas-display) {
+  overflow: visible;
 }
 
 .jp-gis-canvas-button-wrapper {
