--- a/docs/assets/css/custom.css
+++ b/docs/assets/css/custom.css
@@ -1,17 +1,17 @@
-.try-in-jupyterlite-button a {
+.try_examples_button {
   background-color: #f7dc1e;
-  color: black;
-  text-decoration: none;
-
   border: none;
   padding: 5px 10px;
   border-radius: 15px;
   font-family: vibur;
   font-size: larger;
   box-shadow: 0 2px 5px rgba(108, 108, 108, 0.2);
+  color: black;
 }
 
-.try-in-jupyterlite-button a:hover {
+.try_examples_button:hover {
+  transform: scale(1.02);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
   color: white;
-  box-shadow: 0 2px 5px #f7dc1e;
 }
