Add scrollbar to the identify panel
---------

Co-authored-by: Matt Fisher <3608264+mfisher87@users.noreply.github.com>

--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -95,6 +95,7 @@
 }
 
 .jGIS-sidepanel-widget {
+  overflow: auto;
   height: 100%;
 }
 
@@ -249,10 +250,6 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   box-shadow: var(--jp-elevation-z6);
   z-index: 40;
   max-height: 400px;
-  overflow: auto;
-}
-
-.jGIS-Annotations {
   overflow: auto;
 }
 
@@ -737,6 +734,11 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
 
 .jgis-identify-grid-body:last-of-type strong:last-of-type {
   padding-bottom: 8px;
+}
+
+.jgis-scrollable {
+  overflow: auto;
+  height: 100%;
 }
 
 /* Style the file path text */
