Use full height space when displaying widget in linked view or sidecar
Linked view can be opened by right-clicking the gutter space to the left
of a widget and selecting "Create new view for cell output".

Sidecar view can be opened with
[jupyterlab-sidecar](https://github.com/jupyter-widgets/jupyterlab-sidecar).

--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -417,6 +417,12 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   height: 600px;
   width: 100%;
 }
+
+/* Support sidecar / "Create new view for cell output" views */
+.jp-LinkedOutputView .jupytergis-notebook-widget {
+  height: 100%;
+}
+
 .jupytergis-notebook-widget > div {
   height: 100%;
   width: 100%;
