Fix CSS to properly use vertical space in linked output & sidecar views
We expect this change to be eventually included in JupyterLab:
https://github.com/jupyterlab/jupyterlab/pull/17487

Including in JGIS for compatibility with versions of JupyterLab that
don't include this CSS.

--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -419,6 +419,9 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
 }
 
 /* Support output views, created with "Create new view for cell output" context menu */
+.jp-LinkedOutputView .jp-OutputArea-child:only-child {
+  height: 100%;
+}
 .jp-LinkedOutputView .jupytergis-notebook-widget {
   height: 100%;
 }
