--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -687,6 +687,9 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
 
 .jgis-identify-grid-item-header {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 8px;
   grid-column: span 2;
   font-weight: bold;
   font-size: var(--jp-ui-font-size1);
@@ -747,4 +750,14 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   align-items: center;
   margin-bottom: 16px;
   gap: 10px;
+}
+
+.jgis-highlight-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
