Add note about CSS eventually added in JupyterLab
Co-authored-by: Nicolas Brichet <32258950+brichet@users.noreply.github.com>

--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -420,6 +420,9 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
 
 /* Support output views, created with "Create new view for cell output" context menu */
 .jp-LinkedOutputView .jp-OutputArea-child:only-child {
+  /* NOTE: This will eventually be supported directly in JupyterLab
+   * (https://github.com/jupyterlab/jupyterlab/pull/17487), but we should keep
+   * it around for a while for backwards compatibility. */
   height: 100%;
 }
 .jp-LinkedOutputView .jupytergis-notebook-widget {
