--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -374,11 +374,8 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
 }
 
 .jGIS-Remote-Pointer-Icon {
-  filter:
-    drop-shadow(-1px 0px white)
-    drop-shadow(1px 0px white)
-    drop-shadow(0px -1px white)
-    drop-shadow(0px 1px white)
+  filter: drop-shadow(-1px 0px white) drop-shadow(1px 0px white)
+    drop-shadow(0px -1px white) drop-shadow(0px 1px white)
     drop-shadow(0px 0px 1px black);
 }
 .jGIS-Remote-Pointer-Icon:hover {
