--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -790,3 +790,31 @@ div.jGIS-toolbar-widget > div.jp-Toolbar-item:last-child {
   cursor: not-allowed;
   pointer-events: auto;
 }
+
+.jp-gis-symbology-checkboxes {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.jp-gis-checkbox {
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-right: 0.5rem;
+  accent-color: #0078d4;
+}
+
+.jp-gis-stop-container-wrapper {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+.jp-gis-stop-container-wrapper > * {
+  flex: 1;
+}
+
+.jp-gis-stop-container-wrapper > *:only-child {
+  flex: 1 1 100%;
+}
