--- a/packages/base/style/stacBrowser.css
+++ b/packages/base/style/stacBrowser.css
@@ -1,7 +1,7 @@
 .jgis-stac-browser-main {
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 1rem;
 }
 
 .jgis-stac-browser-collection {
