--- a/packages/base/style/shared/popover.css
+++ b/packages/base/style/shared/popover.css
@@ -21,9 +21,10 @@
   width: 18rem;
   border-radius: 0.375rem;
   border-width: 1px;
-  background-color: hsl(var(--jp-layout-color0));
-  color: hsl(var(--foreground));
-  box-shadow: 0 4px 6px hsl(var(--jp-ui-font-color0) / 0.1);
+  background-color: var(--jp-layout-color0);
+  color: var(--jp-ui-font-color0);
+  box-shadow: 0 4px 6px
+    color-mix(in srgb, var(--jp-ui-font-color0), transparent 90%);
   z-index: 50;
 }
 
