--- a/packages/base/style/shared/tabs.css
+++ b/packages/base/style/shared/tabs.css
@@ -2,11 +2,12 @@
   display: inline-flex;
   height: 2.5rem;
   align-items: center;
-  justify-content: center;
+  /* justify-content: space-evenly; */
   border-radius: 0.375rem;
-  background-color: hsl(var(--muted));
+  background-color: var(--jp-layout-color2);
   padding: 0.25rem;
-  color: hsl(var(--muted-foreground));
+  color: var(--jp-ui-font-color0);
+  gap: 1rem;
 }
 
 .TabsTrigger {
@@ -15,17 +16,19 @@
   justify-content: center;
   white-space: nowrap;
   border-radius: 0.25rem;
-  padding: 0.75rem 1rem;
+  padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   font-weight: 500;
   outline: none;
   transition: all 0.3s ease;
+  border: 1px solid transparent;
+  background-color: transparent;
 }
 
 .TabsTrigger:focus-visible {
   box-shadow:
-    0 0 0 2px hsl(var(--ring)),
-    0 0 0 4px hsl(var(--ring));
+    0 0 0 2px var(--jp-accent-color0),
+    0 0 0 4px var(--jp-accent-color0);
 }
 
 .TabsTrigger:disabled {
@@ -34,9 +37,10 @@
 }
 
 .TabsTrigger[data-state='active'] {
-  background-color: hsl(var(--background));
-  color: hsl(var(--foreground));
-  box-shadow: 0 1px 2px hsl(var(--backround) / 0.1);
+  background-color: var(--jp-layout-color0);
+  color: var(--jp-ui-font-color0);
+  box-shadow: 0 1px 2px
+    color-mix(in srgb, var(--jp-layout-color0), transparent 90%);
 }
 
 .TabsContent {
@@ -47,6 +51,6 @@
 .TabsContent:focus-visible {
   outline: none;
   box-shadow:
-    0 0 0 2px hsl(var(--ring)),
-    0 0 0 4px hsl(var(--ring));
+    0 0 0 2px var(--jp-accent-color0),
+    0 0 0 4px var(--jp-accent-color0);
 }
